# ipc-channel

./: Cargo.toml
benches/: bench.rs
platform/: test.rs
platform/inprocess/: mod.rs
platform/linux/: mod.rs
platform/macos/: mod.rs
src/: lib.rs
src/platform/: test.rs
src/platform/inprocess/: mod.rs
src/platform/unix/: mod.rs
src/platform/windows/: mod.rs
tests/: compiletest.rs
tests/compiletest-fail/: receiver_not_sync.rs
