[package]
name = "ipc-channel"
version = "0.6.0"
description = "A multiprocess drop-in replacement for Rust channels"
authors = ["The Servo Project Developers"]
license = "MIT/Apache-2.0"
repository = "https://github.com/servo/ipc-channel"

[features]
force-inprocess = []
unstable = ["compiletest_rs"]

[dependencies]
bincode = "0.6"
lazy_static = "0.2"
libc = "0.2.12"
rand = "0.3"
serde = "0.8"
uuid = {version = "0.3", features = ["v4"]}

# Since `compiletest` only works with unstable, and thus needs to be optional,
# we can't put it in `dev-dependencies`...
compiletest_rs = { version = "0.2", optional = true }

[dev-dependencies]
crossbeam = "0.2"
